task_3/minio-svc-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-app
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - port: 80
      targetPort: 9001
