task_3/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx	
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-conf 
            mountPath: /etc/nginx/conf.d
            readOnly: true	
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            # items:
              # - key: default.conf
                # path: default.conf
            
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  selector:
    app: nginx
