task_3/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: nginx-svc 
              port:
                number: 80
